deploy loading gif

--- a/web/themes/custom/tailwindcss/templates/layout/html.html.twig
+++ b/web/themes/custom/tailwindcss/templates/layout/html.html.twig
@@ -26,6 +26,7 @@
 <!DOCTYPE html>
 <html{{ html_attributes }}>
   <head>
+    <link rel="stylesheet" href="/themes/custom/tailwindcss/src/sass/loading-page.css">
     <head-placeholder token="{{ placeholder_token|raw }}">
     <title>{{ head_title|safe_join(' | ') }}</title>
     <css-placeholder token="{{ placeholder_token|raw }}">
