--- a/web/themes/custom/tailwindcss/src/sass/_menu.scss
+++ b/web/themes/custom/tailwindcss/src/sass/_menu.scss
@@ -52,6 +52,12 @@
   }
 }
 
+#block-optageneralstats{
+  .menu-secundario{
+    overflow-x: scroll;
+    overflow-y: hidden;
+  }
+}
 #block-futbolcolombiano,
 #block-futbolinternacional,
 .menu-secundario{
