css futbol colombiano menu ligas mobile

--- a/web/themes/custom/tailwindcss/src/sass/_responsive.scss
+++ b/web/themes/custom/tailwindcss/src/sass/_responsive.scss
@@ -191,8 +191,21 @@
     }
 }
 
+#block-optageneralstats{
+  .menu-secundario{
+    overflow-x: auto;
+    overflow-y: auto;
+  }
+}
+
 /* RESPONSIVE */
 @screen md {
+  #block-optageneralstats{
+    .menu-secundario{
+      overflow-x: scroll;
+      overflow-y: hidden;
+    }
+  }
   #block-toplinks{
     @apply block;
   }
