css futbol colombiano menu ligas mobile

--- a/web/themes/custom/tailwindcss/src/sass/_responsive.scss
+++ b/web/themes/custom/tailwindcss/src/sass/_responsive.scss
@@ -193,8 +193,10 @@
 
 #block-optageneralstats{
   .menu-secundario{
-    overflow-x: auto;
-    overflow-y: auto;
+    .teams-list{
+      overflow-x: auto;
+      overflow-y: auto;
+    }
   }
 }
 
