css home categorias

--- a/web/themes/custom/tailwindcss/src/sass/_views.scss
+++ b/web/themes/custom/tailwindcss/src/sass/_views.scss
@@ -1076,4 +1076,7 @@ div#block-horizontalresults {
             display: inline-table;
         }
     }
+    .feed-icon{
+        display: none;
+    }
 }
