--- a/web/themes/custom/tailwindcss/templates/layout/page.html.twig
+++ b/web/themes/custom/tailwindcss/templates/layout/page.html.twig
@@ -176,7 +176,7 @@
                     <a class="footer" href="https://winsports.zendesk.com/hc/es/requests/new" target="_blank">Soporte Técnico Win Sports Online</a> 
                     <a class="footer" href="/politica-de-cookies">Política de cookies</a>
                 </div>
-                <div class="tw-text-secondary tw-pb-4">
+                <div class="tw-text-secondary tw-pb-4 tw-mb-16 md:tw-mb-0">
                     <a class="footer" href="/sites/default/files/2020-03/manual_procedimiento_politica_y_tratamiento_de_la_informacion.pdf" target="_blank">Manual de Procedimientos y Políticas de Tratamiento de la Información</a>
                 </div>
             </div>
