--- a/web/themes/custom/win_amp/templates/amp-css/amp-custom-styles.html.twig
+++ b/web/themes/custom/win_amp/templates/amp-css/amp-custom-styles.html.twig
@@ -1,3 +1,36 @@
+/* ---------- Layout ----------- */
+
+html {
+  height: 100%;
+}
+
+body {
+  min-height: 100%;
+}
+
+.amp-header__content,
+.amp-main__content,
+.amp-footer__content {
+  margin: 0 auto;
+  max-width: 620px;
+}
+
+.amp-main {
+  min-height: 300px;
+}
+
+.amp-main__content {
+  padding-top: 20px;
+  padding-bottom: 40px;
+}
+
+.layout-container {
+  max-width: 860px;
+  margin-left: auto;
+  margin-right: auto;
+  box-sizing: border-box;
+}
+
 /* ---------- Typography ----------- */
 
 body {
@@ -5,14 +38,6 @@ body {
   font-size: 100%;
   line-height: 1.5;
   word-wrap: break-word;
-}
-.link,
-header,
-.amp-system-branding-block .site-slogan,
-footer[role=contentinfo],
-.amp-skip-link,
-.messages__wrapper {
-  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
 }
 
 /* --- Links --- */
@@ -33,16 +58,70 @@ a:focus,
   border-bottom-style: solid;
 }
 
-h1,
-.region-sidebar-first h2:first-child,
-.region-sidebar-second h2:first-child {
-  margin-top: 0;
-  padding-top: 0;
+.link {
+  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
 }
 
 h1 a,
 h2 a {
   border-bottom: none;
+}
+
+/* --- Headings --- */
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+.heading-a,
+.heading-b,
+.heading-c,
+.heading-d,
+.heading-e,
+.heading-f {
+  font-weight: inherit;
+  margin: 1rem 0 0.5rem;
+}
+
+h1,
+.heading-a {
+  font-size: 1.2rem;
+  color: #000;
+}
+
+h2,
+.heading-b {
+  font-size: 1rem;
+}
+
+h3,
+.heading-c {
+  font-size: 0.9375rem;
+}
+
+h4,
+.heading-d {
+  font-size: 0.875rem;
+}
+
+h5,
+h6,
+.heading-e,
+.heading-f {
+  text-transform: uppercase;
+  letter-spacing: 0.1em;
+}
+
+h5,
+.heading-e {
+  font-size: 0.75rem;
+}
+
+h6,
+.heading-f {
+  font-size: 0.625rem;
 }
 
 /* --- Text --- */
@@ -128,21 +207,21 @@ ul ul {
 /* ---------- Colors ----------- */
 
 body {
-  background: #ffffff;
+  background: #292929;
   color: #3b3b3b;
 }
 
-header {
+.amp-header {
   background-color: #1d84c3;
   background-image: -webkit-linear-gradient(top, #055a8e 0%, #1d84c3 100%);
   background-image: linear-gradient(to bottom, #055a8e 0%, #1d84c3 100%);
 }
 
-main {
+.amp-main {
   background-color: #ffffff;
 }
 
-footer[role=contentinfo] {
+.amp-footer {
   background: #292929;
 }
 
@@ -163,6 +242,15 @@ a:active,
   color: #23aeff;
 }
 
+.amp-header,
+.amp-header a,
+.amp-header li a.is-active,
+.site-branding__text,
+.site-branding,
+.site-branding__text a,
+.site-branding a {
+  color: #fffeff;
+}
 
 /* ---------- Utility classes ----------- */
 
@@ -200,52 +288,48 @@ a:active,
 
 /* ---------- Header ----------- */
 
-header div:first-child {
+.amp-header {
+  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+}
+
+.amp-header__content {
   padding: 0.75rem .9375rem 0.75rem;
 }
 
 
-header a {
+.amp-header a {
   border-bottom: none;
-}
-header,
-header a,
-header li a.is-active,
-header .link,
-.amp-system-branding-block,
-.amp-system-branding-block a,
-  color: #fffeff;
 }
 
 .brand {
   margin: 0.375rem auto 0.375rem;
 }
 
-.amp-system-branding-block .site-logo {
+.site-branding__logo {
   display: inline-block;
   margin-right: 0.875rem; /* LTR */
   margin-bottom: 0.25rem;
+  width: 6rem;
 }
 
-[dir="rtl"] .amp-system-branding-block .site-logo {
+[dir="rtl"] .site-branding__logo {
   margin-right: 0;
   margin-left: 1em;
 }
 
-.amp-system-branding-block .site-name,
-.amp-system-branding-block .site-slogan {
+.site-branding__text {
   display: inline-block;
   vertical-align: top;
 }
 
-.amp-system-branding-block .site-name,
-.amp-system-branding-block .site-name a {
+.site-branding__name {
   font-size: 1.375rem;
-  color: #ffffff;
+  color: #686868;
   line-height: 1;
 }
 
-.amp-system-branding-block .site-slogan {
+.site-branding__slogan {
+  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
   font-size: 0.8125rem;
   margin-top: 7px;
   word-spacing: 0.1em;
@@ -254,91 +338,30 @@ header .link,
 
 /* ---------- Footer ----------- */
 
-footer[role=contentinfo] div {
+.amp-footer {
+  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+}
+
+.amp-footer__content {
   color: #c0c0c0;
   color: rgba(255, 255, 255, 0.65);
   font-size: 0.75rem;
-  padding: 10px;
+  padding: 2rem 1rem 2rem;
 }
 
-footer[role=contentinfo] a,
-footer[role=contentinfo] a.is-active {
+.amp-footer a,
+.amp-footer a.is-active {
   color: #fcfcfc;
   color: rgba(255, 255, 255, 0.8);
 }
 
-footer[role=contentinfo] a:hover,
-footer[role=contentinfo] a:focus {
+.amp-footer a:hover,
+.amp-footer a:focus {
   color: #fefefe;
   color: rgba(255, 255, 255, 0.95);
 }
 
-/* ----------  Tabs and Main menu ----------  */
 
-.block-system-breadcrumb-block ul,
-.tabs ul,
-#menu ul {
-  display: flex;
-  list-style-type: none;
-  padding: 0;
-}
-
-.block-system-breadcrumb-block ol,
-div.tabs,
-#menu ul {
-  margin: 1em 0;
-}
-.block-system-breadcrumb-block ol,
-main .contextual-region ul,
-#menu ul {
-  list-style: none;
-  margin: 0 0 0.5em;
-  padding: 0;
-}
-.block-system-breadcrumb-block > li,
-.tabs > li,
-#menu ul > li {
-  display: inline-block;
-  margin-right: 0.3em; /* LTR */
-}
-[dir="rtl"] .block-system-breadcrumb-block > li, .tabs > li, #menu ul > li {
-  margin-left: 0.3em;
-  margin-right: 0;
-}
-.block-system-breadcrumb-block,
-.tabs a,
-#menu ul a {
-  display: block;
-  padding: 0.2em 1em;
-  text-decoration: none;
-}
-.block-system-breadcrumb-block,
-.tabs a.is-active,
-#menu ul a.is-active {
-  background-color: #eee;
-}
-.block-system-breadcrumb-block,
-.tabs a:focus,
-.tabs a:hover,
-#menu ul a:focus,
-#menu ul a:hover {
-  background-color: #f5f5f5;
-}
-
-.region-primary-menu {
-  background-color: #292929;
-}
-.region-primary-menu a {
-  color: #ffffff;
-}
-.region-primary-menu a:focus,
-.region-primary-menu a:hover {
-  color: #000;
-}
-
-.block-system-breadcrumb-block li:after {
-  content: ">"
-}
 /* ---------- Skip Link ----------- */
 
 .amp-skip-link {
@@ -349,6 +372,7 @@ main .contextual-region ul,
   z-index: 50;
   background: #444;
   background: rgba(0, 0, 0, 0.6);
+  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
   font-size: 0.94em;
   line-height: 1.7em;
   padding: 1px 10px 2px;
@@ -366,6 +390,7 @@ main .contextual-region ul,
 
 .messages__wrapper {
   padding: 20px 0 5px 8px;
+  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 8px 0;
 }
 
@@ -450,4 +475,3 @@ main .contextual-region ul,
 .messages--error p.error {
   color: #a51b00;
 }
-
