--- a/web/themes/custom/win_amp/templates/layout/page.html.twig
+++ b/web/themes/custom/win_amp/templates/layout/page.html.twig
@@ -21,6 +21,7 @@
  *   linking to the front page. This includes the language domain or prefix.
  *
  * Page content (in order of occurrence in the default page.html.twig):
+ * - messages: Status and error messages. Should be displayed prominently.
  * - node: Fully loaded node, if there is an automatically-loaded node
  *   associated with the page and the node ID is the second argument in the
  *   page's path (e.g. node/12345 and node/12345/revisions, but not
@@ -29,63 +30,37 @@
  * Regions:
  * - page.header: Items for the header region.
  * - page.primary_menu: Items for the primary menu region.
+ * - page.secondary_menu: Items for the secondary menu region.
+ * - page.highlighted: Items for the highlighted content region.
+ * - page.help: Dynamic help text, mostly for admin pages.
  * - page.content: The main content of the current page.
  * - page.sidebar_first: Items for the first sidebar.
  * - page.sidebar_second: Items for the second sidebar.
  * - page.footer: Items for the footer region.
+ * - page.breadcrumb: Items for the breadcrumb region.
  *
  * @see template_preprocess_page()
  * @see html.html.twig
  */
 #}
-<div class="layout-wrapper">
-<div class="layout-container">
 
-  <header role="banner">
+<header role="banner" class="amp-header">
+  <div class="amp-header__content">
     {{ page.header }}
-  </header>
+  </div>
+</header>
 
-  {% if page.primary_menu %}
-    <div id="menu">
-    {{ page.primary_menu }}
-    </div>
-  {% endif %}
+<main role="main" class="amp-main">
+  <a id="main-content" tabindex="-1"></a>{# link is in html.html.twig #}
+  <div class="amp-main__content">
+    {{ page.content }}
+  </div>
+</main>
 
-  {% if page.breadcrumb|render is not empty %}
-    <div id="breadcrumb">
-    {{ page.breadcrumb }}
-    </div>
-  {% endif %}
-
-  <main role="main">
-    <div class="main-outer">
-    <div class="main-inner">
-    <a id="main-content" tabindex="-1"></a>{# link is in html.html.twig #}
-
-    <div class="layout-content">
-      {{ page.content }}
-    </div>{# /.layout-content #}
-
-    {% if page.sidebar_first %}
-      <aside class="layout-sidebar-first" role="complementary">
-        {{ page.sidebar_first }}
-      </aside>
-    {% endif %}
-
-    {% if page.sidebar_second %}
-      <aside class="layout-sidebar-second" role="complementary">
-        {{ page.sidebar_second }}
-      </aside>
-    {% endif %}
-    </div>
-    </div>
-  </main>
-
-  {% if page.footer %}
-    <footer role="contentinfo">
+{% if page.footer %}
+  <footer role="contentinfo" class="amp-footer">
+    <div class="amp-footer__content">
       {{ page.footer }}
-    </footer>
-  {% endif %}
-
-</div>{# /.layout-container #}
-</div>{# /.layout-wrapper #}
+    </div>
+  </footer>
+{% endif %}
