css, templates - AMPtheme

--- a/web/themes/custom/win_amp/templates/amp-css/amp-custom-styles.html.twig
+++ b/web/themes/custom/win_amp/templates/amp-css/amp-custom-styles.html.twig
@@ -475,3 +475,124 @@ a:active,
 .messages--error p.error {
   color: #a51b00;
 }
+
+/* ---------- CUSTOM CSS AMP ----------- */
+
+header{
+  background: #0b3b41 !important;
+}
+
+h2.title{
+  font-size: 1.5rem;
+  margin-bottom: 1rem;
+  line-height: 1;
+  text-transform: none !important;
+}
+
+h2.title a{
+  color: #0b3b41;
+  font-weight: 600;
+  border-bottom-style: none;
+}
+
+.off-canvas-wrapper{
+  display: none;
+}
+
+.side-button{
+  display: block;
+  border: none;
+  background: none;
+  font-size: 30px;
+  padding: 0;
+  width: 35px;
+  line-height: 30px;
+  color: white;
+  outline: none;
+}
+
+.amp-header__content{
+  display: flex;
+}
+
+.amp-header__content  > div{
+  margin: 0 auto;
+}
+
+/* ---------- Sidebar ----------- */
+
+.amp-sidebar
+{
+  background: #6cfac1;
+  padding: 15px;
+  width: 100%; 
+  max-width: 300px;
+}
+
+.amp-sidebar ul{
+  list-style: none;
+}
+
+.amp-sidebar a{
+  display: block;
+  padding: 1.2rem 1rem;
+  font-size: 1rem;
+  text-transform: uppercase;
+  font-weight: 600;
+  color: #0b3b41;
+  border: none;
+}
+
+.amp-sidebar A:hover{
+  border-bottom: none;
+}
+
+.side-button{
+  appearance: none;
+  border: none;
+  background: none;
+  font-size: 30px;
+  padding: 0;
+  width: 35px;
+  line-height: 30px;
+  color: white;
+  outline: none;
+}
+
+.side-button-close{
+  font-size: 50px;
+}
+
+.side-button-toggle{
+  position: relative;
+  z-index: 10;
+}
+
+.side-button-toggle:active{
+  color: white;
+}
+
+.amp-main__content{
+  padding: 1rem 2rem !important;
+}
+
+/* ---------- footer ----------- */
+
+.container{
+  text-align: center;
+  background-color: #0b3b41;
+  color: white;
+}
+
+.menu-footer-amp a{
+  width: 100%;
+  display: block;
+  padding: 1rem 0;
+  border: none;
+  color: #0ef8c3;
+}
+.img-footer,
+.copyright,
+.menu-footer-amp{
+  padding: 1rem 0;
+}
