--- a/web/themes/custom/win_amp/templates/amp-css/amp-custom-styles.html.twig
+++ b/web/themes/custom/win_amp/templates/amp-css/amp-custom-styles.html.twig
@@ -478,15 +478,14 @@ a:active,
 
 /* ---------- CUSTOM CSS AMP ----------- */
 
-header{
-  background: #0b3b41 !important;
+.amp-header{
+  background: #0b3b41;
 }
 
 h2.title{
   font-size: 1.5rem;
   margin-bottom: 1rem;
   line-height: 1;
-  text-transform: none !important;
 }
 
 h2.title a{
@@ -573,7 +572,7 @@ h2.title a{
 }
 
 .amp-main__content{
-  padding: 1rem 2rem !important;
+  padding: 1rem 2rem;
 }
 
 /* ---------- footer ----------- */
@@ -591,8 +590,14 @@ h2.title a{
   border: none;
   color: #0ef8c3;
 }
+
+.img-footer amp-img{
+  max-width: 140px;
+  margin: 0 auto;
+}
+
 .img-footer,
 .copyright,
 .menu-footer-amp{
-  padding: 1rem 0;
+  padding: 1rem;
 }
