--- a/web/themes/custom/win_amp/templates/layout/html.html.twig
+++ b/web/themes/custom/win_amp/templates/layout/html.html.twig
@@ -37,6 +37,7 @@
     <js-placeholder token="{{ placeholder_token|raw }}">
     <script async src="https://cdn.ampproject.org/v0.js"></script>
     <script async custom-element="amp-sidebar" src="https://cdn.ampproject.org/v0/amp-sidebar-0.1.js"></script>
+    <script async custom-element="amp-iframe" src="https://cdn.ampproject.org/v0/amp-iframe-0.1.js"></script>
   </head>
   <body{{ attributes }}>
     {% if amp_skip_link %}
