--- a/web/themes/custom/win_amp/templates/layout/page.html.twig
+++ b/web/themes/custom/win_amp/templates/layout/page.html.twig
@@ -76,7 +76,14 @@
 <div class="footer-amp">
     <div class="container">
         <div class="img-footer">
-            <img src="/themes/custom/tailwindcss/images/logos/winsportsplus.png" alt="Winsports +">
+          <amp-img 
+          alt="Winsports +"
+          src="/themes/custom/tailwindcss/images/logos/winsportsplus.png"
+          width="140"
+          height="55"
+          layout="responsive"
+          >
+          </amp-img>
         </div>
         <div class="copyright">
             Copyright© 2020, Bogotá - Colombia. Todos los derechos reservados.  Está prohibida la reproducción total o parcial de la página
