css opta_tournament_stats_block

--- a/web/themes/custom/tailwindcss/src/sass/_widgets.scss
+++ b/web/themes/custom/tailwindcss/src/sass/_widgets.scss
@@ -67,7 +67,8 @@
 article.id-3{
   #schedules{
     div.match-events{
-      @apply tw-cursor-pointer pointer-events-auto;
+      cursor: pointer;
+      pointer-events: auto !important;
     }
   }
 }
