--- a/web/themes/custom/tailwindcss/src/sass/_widgets.scss
+++ b/web/themes/custom/tailwindcss/src/sass/_widgets.scss
@@ -1,4 +1,3 @@
-
 #block-futbolcolombiano-estadisticas, .opta-widgets {
   @apply text-primary;
   .table-option {
@@ -69,6 +68,19 @@ article.id-3{
     div.match-events{
       cursor: pointer;
       pointer-events: auto !important;
+    }
+  }
+}
+
+.external-widget{
+  .menu-secundario{
+    li,
+    .team-item{
+      display: none;
+    }
+    li:first-child,
+    .team-item:first-child{
+      display: block;
     }
   }
 }
