--- a/web/themes/custom/tailwindcss/src/sass/_widgets.scss
+++ b/web/themes/custom/tailwindcss/src/sass/_widgets.scss
@@ -77,6 +77,9 @@ article.id-3{
     li,
     .team-item{
       display: none;
+      a{
+        pointer-events: none;
+      }
     }
     li:first-child,
     .team-item:first-child{
