--- a/web/themes/custom/tailwindcss/src/sass/_videos.scss
+++ b/web/themes/custom/tailwindcss/src/sass/_videos.scss
@@ -41,7 +41,7 @@ div[id*="block-views-block-videos-"]{
     select{
         min-width: 130px;
     }
-    .form-item{
+    .js-form-type-select{
         @apply relative;
         &:after {
             content: "";
@@ -82,6 +82,7 @@ div[id*="block-views-block-opinion-"],
 
 div[id*="block-views-block-videos-"] select,
 div[id*="block-views-block-opinion-"] select,
+div[id*="block-views-block-opinion-"] .hasDatepicker,
 div#blocktabs-columnas_blogs select{
     @apply appearance-none;
     height: 3rem;
@@ -92,6 +93,13 @@ div#blocktabs-columnas_blogs select{
     margin-bottom: 15px;
     text-align: center;
     background-color: #c1c1c1;
+}
+div[id*="block-views-block-opinion-"]{
+    .hasDatepicker{
+        input{
+            max-width: 130px;
+        }
+    }
 }
 
 #block-views-block-noticias-block-1,
