--- a/web/themes/custom/tailwindcss/src/sass/_videos.scss
+++ b/web/themes/custom/tailwindcss/src/sass/_videos.scss
@@ -94,19 +94,9 @@ div#blocktabs-columnas_blogs select{
     text-align: center;
     background-color: #c1c1c1;
 }
-div[id*="block-views-block-videos-"]{
-    .hasDatepicker{
-        @apply appearance-none;
-        height: 3rem;
-        padding-left: 0rem;
-        padding-right: 3rem;
-        padding-top: .75rem;
-        padding-bottom: .75rem;
-        margin-bottom: 15px;
-        text-align: center;
-        background-color: #c1c1c1;
-        max-width: 180px;
-        position: relative;
+#views-exposed-form-videos-block-6,
+#views-exposed-form-videos-block-7{
+    .form-item{
         &:after {
             content: "";
             background-image: url(/themes/custom/tailwindcss/images/icons/calendar.png);
@@ -115,6 +105,19 @@ div[id*="block-views-block-videos-"]{
             height: 48px;
             left: 9rem;
             position: absolute;
+        }
+        .hasDatepicker{
+            @apply appearance-none;
+            height: 3rem;
+            padding-left: 0rem;
+            padding-right: 3rem;
+            padding-top: .75rem;
+            padding-bottom: .75rem;
+            margin-bottom: 15px;
+            text-align: center;
+            background-color: #c1c1c1;
+            max-width: 180px;
+            position: relative;
         }
     }
 }
