--- a/web/modules/custom/optafeeds/components/widget_positions_colombia/template.html
+++ b/web/modules/custom/optafeeds/components/widget_positions_colombia/template.html
@@ -1,25 +1,36 @@
+<div class="tool flex mb-4">
+    <div class="w-2/12 self-center text-center">
+        <img class="inline-block" src="/themes/custom/tailwindcss/images/tool.png">
+    </div>
+    <div class="w-10/12 text-xs self-center opta-widgets">
+        Más datos y estadísticas desplazándose de forma horizontal 
+    </div>
+</div>
 <div class="opta-widgets" style="background-color: #ededed;">
-    <div class="p-4 form-item">
-        <select class="m-0 w-full py-3 px-4" @change="loadTable" v-model="tournament_season" name="id_tournament" id="widget_tournament_id">
+    <div class="p-4 relative">
+        <select class="m-0 w-full py-3 px-4 appearance-none" @change="selectOption('positions')" v-model="tournament_season" name="id_tournament" id="widget_tournament_id">
             <option :value="tour.field_opta_id + '-' + tour.field_opta_season" v-for="tour in tournaments">{{ tour.title }}</option>
-        </select>
+        </select>  
+        <div class="pointer-events-none absolute inset-y-0 right-0 flex items-center px-8 text-gray-700">
+            <svg class="fill-current h-4 w-4" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20"><path d="M9.293 12.95l.707.707L15.657 8l-1.414-1.414L10 10.828 5.757 6.586 4.343 8z"/></svg>
+          </div>  
     </div>
     <div class="flex flex-no-wrap overflow-x-auto w-full">
         <div @click="selectOption(option.key)" v-for="option in options" class="flex-1 text-center py-3 px-6 font-title cursor-pointer table-option" :class="selected_option == option.key?'active':''">{{ option.label }}</div>
     </div>
     <div v-if="selected_option === 'schedules'" class="flex flex-no-wrap overflow-x-auto w-full" style="background-color: #0ef8c3;">
-        <div @click="setMatches(round[1].round.id)" v-for="round in rounds" class="whitespace-no-wrap cursor-pointer phase p-2" :class="selected_round_id == round[1].round.id?'active':''">
-            {{ roundName(round[1].round.number) }}
+        <div @click="setMatches(round.id)" v-for="round in rounds" class="whitespace-no-wrap cursor-pointer phase p-2" :class="selected_round_id == round.id?'active':''">
+            {{ roundName(round.number) }}
         </div>
     </div>
-    <div v-else-if="phases && Object.keys(phases).length" class="flex flex-no-wrap overflow-x-auto w-full" style="background-color: #0ef8c3;">
-        <div @click="selectPhase(phase.phase.id)" v-for="phase in phases" v-if="phase.teams && Object.keys(phase.teams).length" class="whitespace-no-wrap cursor-pointer phase p-2" :class="selected_phase_id == phase.phase.id?'active':''">
-            {{ phaseName(phase.phase.type, phase.phase.number) }}
+    <div v-else-if="selected_option === 'positions' && phases && Object.keys(phases).length" class="flex flex-no-wrap overflow-x-auto w-full" style="background-color: #0ef8c3;">
+        <div @click="selectPhase(phase.id)" v-for="phase in phases" class="whitespace-no-wrap cursor-pointer phase p-2" :class="selected_phase_id == phase.id?'active':''">
+            {{ phaseName(phase.type, phase.number) }}
         </div>
     </div>
-    <div class="border-l-8 my-6 md:tw-h-380 md:tw-overflow-y-scroll scrollbar-w-2 scrollbar-track-gray-lighter scrollbar-thumb-rounded scrollbar-thumb-gray scrolling-touch" style="border-color: #FACA32;">
+    <div v-if="!loading" class="border-l-8 my-6 md:tw-h-380 md:tw-overflow-y-scroll scrollbar-w-2 scrollbar-track-gray-lighter scrollbar-thumb-rounded scrollbar-thumb-gray scrolling-touch" style="border-color: #FACA32;">
         <div v-if="selected_option === 'schedules'">
-            <div v-for="(items,day) in matches" class="">
+            <div v-for="(items,day) in matches">
                 <div class="tw-bg-primary tw-text-white tw-p-4 capitalize">{{ moment(day).format('MMMM D YYYY') }}</div>
                 <div v-for="match in items" @click="gotoMatch(match.id)" class="tw-border-b tw-border-white tw-p-2 tw-cursor-pointer">
                     <div class="tw-flex tw-items-center tw-justify-between tw-text-gray-700">
@@ -35,39 +46,54 @@
                             <img :src="'https://secure.omo.akamai.opta.net/image.php?secure=true&h=secure.omo.akamai.opta.net&sport=football&entity=team&description=badges&dimensions=65&id='+match.away.id" alt="" class="tw-h-8 tw-pl-2">
                         </div>
                     </div>
-                    <div class="tw-flex tw-justify-center tw-text-xs tw-text-gray-600">
+                   <div v-if="match.period === 'FullTime' || match.period === 'Full Time' || match.period === 'PreMatch' || match.period === 'Postponed' || match.period === 'TBC' || match.period === 'Abandoned'" class="tw-flex tw-justify-center tw-text-xs tw-text-gray-600">
                         {{ moment(match.date).format('h:mm a') }}
+                    </div>
+                    <div v-else class="tw-flex tw-justify-center tw-text-xs tw-text-gray-600">
+                        '{{match.minute.label}}
                     </div>
                 </div>
             </div>
         </div>
-        <div v-else>
+        <div v-else-if="selected_option === 'positions'">
+            <div v-for="(stage,si) in stages" v-if="stage.id === selected_phase_id && si<max_rows">
+                <div v-for="(group, gi) in stage.teams" v-if="gi<max_rows">
+                        <div  class="ml-1 flex border-b-1 p-1 justify-between text-sm">
+                            <div class="w-1/2 flex"></div>
+                            <div class="w-1/2 flex text-center justify-between pb-1 border-b" style="border-color: rgba(10,59,65,0.2);">
+                                <div class="flex-1">J</div>
+                                <div class="flex-1">V</div>
+                                <div class="flex-1">D</div>
+                                <div class="flex-1">E</div>
+                                <div class="flex-1"><strong>Pts</strong></div>
+                                <div class="flex-1">GD</div>
+                            </div>
+                        </div>
+                        <div v-for="(row,index) in group" v-if="index<max_rows"class="ml-1 flex border-b-1 p-1 justify-between text-sm">
+                            <div class="w-1/2 flex items-center">
+                                <div class="w-1/6 text-center px-2"><strong>{{ row.pos }}</strong></div>
+                                <div class="w-5/6 truncate ml-1">{{ row.name }}</div>
+                            </div>
+                            <div class="w-1/2 flex text-center justify-between pb-1 border-b" style="border-color: rgba(10,59,65,0.2);">
+                                <div class="flex-1">{{ row.pj }}</div>
+                                <div class="flex-1">{{ row.pg }}</div>
+                                <div class="flex-1">{{ row.pp }}</div>
+                                <div class="flex-1">{{ row.pe }}</div>
+                                <div class="flex-1"><strong>{{ row.pt }}</strong></div>
+                                <div class="flex-1">{{ row.gd }}</div>
+                            </div>
+                        </div>
+                        <br>
+                </div>
+            </div>
+        </div>
+        <div v-else-if="selected_option === 'decline'">
             <div v-if="teams && teams.length" class="ml-1 flex border-b-1 p-1 justify-between text-sm">
                 <div class="w-1/2 flex"></div>
-                <div v-if="selected_option == 'decline'" class="w-1/2 flex text-center justify-between pb-1 border-b" style="border-color: rgba(10,59,65,0.2);">
+                <div class="w-1/2 flex text-center justify-between pb-1 border-b" style="border-color: rgba(10,59,65,0.2);">
                     <div class="flex-1">Pts</div>
                     <div class="flex-1">Prom</div>
                     <div class="flex-1">PJ</div>
-                </div>
-                <div v-else-if="selected_option == 'reclassification'" class="w-1/2 flex text-center justify-between pb-1 border-b" style="border-color: rgba(10,59,65,0.2);">
-                    <div class="flex-1">Pts</div>
-                    <div class="flex-1">PJ</div>
-                    <div class="flex-1">GF</div>
-                    <div class="flex-1">GC</div>
-                    <div class="flex-1">DG</div>
-                </div>
-                <div v-else-if="selected_option == 'scorers'" class="w-1/2 flex text-center justify-between pb-1 border-b" style="border-color: rgba(10,59,65,0.2);">
-                    <div class="flex-1">Posición</div>
-                    <div class="flex-1">TG</div>
-                    <div class="flex-1">PJ</div>
-                </div>
-                <div v-else class="w-1/2 flex text-center justify-between pb-1 border-b" style="border-color: rgba(10,59,65,0.2);">
-                    <div class="flex-1">J</div>
-                    <div class="flex-1">V</div>
-                    <div class="flex-1">D</div>
-                    <div class="flex-1">E</div>
-                    <div class="flex-1"><strong>Pts</strong></div>
-                    <div class="flex-1">GD</div>
                 </div>
             </div>
             <div v-for="(row,index) in teams" v-if="index<max_rows" class="ml-1 flex border-b-1 p-1 justify-between text-sm">
@@ -75,25 +101,45 @@
                     <div class="w-1/6 text-center px-2"><strong>{{ row.pos }}</strong></div>
                     <div class="w-5/6 truncate ml-1">{{ row.name }}</div>
                 </div>
-                <div v-if="selected_option == 'decline'" class="w-1/2 flex text-center justify-between pb-1 border-b" style="border-color: rgba(10,59,65,0.2);">
+                <div class="w-1/2 flex text-center justify-between pb-1 border-b" style="border-color: rgba(10,59,65,0.2);">
                     <div class="flex-1">{{ row.pt }}</div>
                     <div class="flex-1">{{ row.prom }}</div>
                     <div class="flex-1">{{ row.pj }}</div>
                 </div>
-                <div v-else-if="selected_option == 'reclassification'" class="w-1/2 flex text-center justify-between pb-1 border-b" style="border-color: rgba(10,59,65,0.2);">
+            </div>
+        </div>
+        <div v-else-if="selected_option === 'reclassification'">
+            <div v-if="teams && teams.length" class="ml-1 flex border-b-1 p-1 justify-between text-sm">
+                <div class="w-1/2 flex"></div>
+                <div class="w-1/2 flex text-center justify-between pb-1 border-b" style="border-color: rgba(10,59,65,0.2);">
+                    <div class="flex-1">Pts</div>
+                    <div class="flex-1">PJ</div>
+                    <div class="flex-1">GF</div>
+                    <div class="flex-1">GC</div>
+                    <div class="flex-1">DG</div>
+                </div>
+            </div>
+            <div v-for="(row,index) in teams" v-if="index<max_rows" class="ml-1 flex border-b-1 p-1 justify-between text-sm">
+                <div class="w-1/2 flex items-center">
+                    <div class="w-1/6 text-center px-2"><strong>{{ row.pos }}</strong></div>
+                    <div class="w-5/6 truncate ml-1">{{ row.name }}</div>
+                </div>
+                <div class="w-1/2 flex text-center justify-between pb-1 border-b" style="border-color: rgba(10,59,65,0.2);">
                     <div class="flex-1">{{ row.pt }}</div>
                     <div class="flex-1">{{ row.pj }}</div>
                     <div class="flex-1">{{ row.gf }}</div>
                     <div class="flex-1">{{ row.gc }}</div>
                     <div class="flex-1">{{ row.gd }}</div>
                 </div>
-                <div v-else class="w-1/2 flex text-center justify-between pb-1 border-b" style="border-color: rgba(10,59,65,0.2);">
-                    <div class="flex-1">{{ row.pj }}</div>
-                    <div class="flex-1">{{ row.pg }}</div>
-                    <div class="flex-1">{{ row.pp }}</div>
-                    <div class="flex-1">{{ row.pe }}</div>
-                    <div class="flex-1"><strong>{{ row.pt }}</strong></div>
-                    <div class="flex-1">{{ row.gd }}</div>
+            </div>   
+        </div>
+        <div v-else-if="selected_option == 'scorers'">
+            <div v-if="teams && teams.length" class="ml-1 flex border-b-1 p-1 justify-between text-sm">
+                <div class="w-1/2 flex"></div>
+                <div class="w-1/2 flex text-center justify-between pb-1 border-b" style="border-color: rgba(10,59,65,0.2);">
+                    <div class="flex-1">Posición</div>
+                    <div class="flex-1">TG</div>
+                    <div class="flex-1">PJ</div>
                 </div>
             </div>
             <div v-for="(row,index) in players" v-if="index<max_rows" class=" ml-1 flex border-b-1 p-1 justify-between text-sm">
@@ -106,9 +152,8 @@
                     <div class="flex-1">{{ row.goals }}</div>
                     <div class="flex-1">{{ row.games_played }}</div>
                 </div>
-            </div>
+            </div>    
         </div>
     </div>
-    <div class="more-link full"><a href="/futbol-colombiano">Todas las estadísticas</a></div>
+    <div class="more-link full"><a href="/posiciones">Todas las estadísticas</a></div>
 </div>
-
