--- a/web/modules/custom/optafeeds/components/widget_positions_colombia/template.html
+++ b/web/modules/custom/optafeeds/components/widget_positions_colombia/template.html
@@ -8,7 +8,7 @@
 </div>
 <div class="opta-widgets" style="background-color: #ededed;">
     <div class="p-4 relative">
-        <select class="m-0 w-full py-3 px-4 appearance-none" @change="selectOption('positions')" v-model="tournament_season" name="id_tournament" id="widget_tournament_id">
+        <select class="m-0 w-full py-3 px-4 appearance-none" @change="selectTournaments()" v-model="tournament_season" name="id_tournament" id="widget_tournament_id">
             <option :value="tour.field_opta_id + '-' + tour.field_opta_season" v-for="tour in tournaments">{{ tour.title }}</option>
         </select>  
         <div class="pointer-events-none absolute inset-y-0 right-0 flex items-center px-8 text-gray-700">
