--- a/web/themes/custom/tailwindcss/src/sass/_menu.scss
+++ b/web/themes/custom/tailwindcss/src/sass/_menu.scss
@@ -34,6 +34,11 @@
       a{
         @apply uppercase text-white px-6;
       }
+      a.equipos{
+        @screen md {
+          @apply tw-hidden;
+        }
+      }
     }
   }
 }
