--- a/web/themes/custom/tailwindcss/src/sass/_views.scss
+++ b/web/themes/custom/tailwindcss/src/sass/_views.scss
@@ -1080,3 +1080,10 @@ div#block-horizontalresults {
         display: none;
     }
 }
+.page-equipos{
+    .views-row{
+        max-width: 100px;
+        display: block;
+        margin: 0 auto;
+    }
+}
